--- a/bookstoreBackend/drools-spring-app/pom.xml
+++ b/bookstoreBackend/drools-spring-app/pom.xml
@@ -101,7 +101,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
+
     </dependencies>
 
     <properties>
